Bug 1273070 P1 Fix fetch() WorkerRunnable classes to allow it to work with nested Workers. r=khuey